@@ -4,7 +4,7 @@ package eu.essi_lab.messages.bond;
  * #%L
  * Discovery and Access Broker (DAB)
  * %%
- * Copyright (C) 2021 - 2025 National Research Council of Italy (CNR)/Institute of Atmospheric Pollution Research (IIA)/ESSI-Lab
+ * Copyright (C) 2021 - 2026 National Research Council of Italy (CNR)/Institute of Atmospheric Pollution Research (IIA)/ESSI-Lab
  * %%
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as published by
@@ -21,8 +21,8 @@ package eu.essi_lab.messages.bond;
  * #L%
  */
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
@@ -41,12 +41,11 @@ import eu.essi_lab.model.pluggable.Provider;
  */
 public abstract class DynamicView extends View implements Pluggable {
 
-    protected List<String> arguments;
+    protected final List<String> arguments;
 
     public static List<DynamicView> getAvailableDynamicViews() {
 	PluginsLoader<DynamicView> pluginsLoader = new PluginsLoader<>();
-	List<DynamicView> views = pluginsLoader.loadPlugins(DynamicView.class);
-	return views;
+	return pluginsLoader.loadPlugins(DynamicView.class);
     }
 
     public static final String RESERVED_PREFIX = "gs-view-";
@@ -110,11 +109,7 @@ public abstract class DynamicView extends View implements Pluggable {
      */
     public void setPostfix(String postfix) {
 
-	try {
-	    postfix = URLDecoder.decode(postfix, "UTF-8");
-	} catch (UnsupportedEncodingException e) {
-	    e.printStackTrace();
-	}
+	postfix = URLDecoder.decode(postfix, StandardCharsets.UTF_8);
 
 	if (postfix == null || postfix.equals("") || postfix.equals(ARGUMENT_START + ARGUMENT_END)) {
 	    // null
@@ -211,7 +206,7 @@ public abstract class DynamicView extends View implements Pluggable {
 	for (DynamicView dynamicView : dynamicViews) {
 	    String prefix = RESERVED_PREFIX + dynamicView.getPrefix();
 	    if (viewId.startsWith(prefix)) {
-		String postfix = viewId.substring(prefix.length(), viewId.length());
+		String postfix = viewId.substring(prefix.length());
 		dynamicView.setPostfix(postfix);
 		dynamicView.setId(viewId);
 		return Optional.of(dynamicView);
