@@ -4,7 +4,7 @@ package eu.essi_lab.messages.bond;
  * #%L
  * Discovery and Access Broker (DAB)
  * %%
- * Copyright (C) 2021 - 2025 National Research Council of Italy (CNR)/Institute of Atmospheric Pollution Research (IIA)/ESSI-Lab
+ * Copyright (C) 2021 - 2026 National Research Council of Italy (CNR)/Institute of Atmospheric Pollution Research (IIA)/ESSI-Lab
  * %%
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as published by
@@ -41,12 +41,12 @@ public class DynamicViewOnlineId extends DynamicView {
 
     @Override
     public String getLabel() {
-	return "Dyanamic view for online id: " + arguments.get(0);
+	return "Dyanamic view for online id: " + arguments.getFirst();
     }
 
     @Override
     public Bond getDynamicBond() {
-	return BondFactory.createOnlineIdentifierBond(arguments.get(0));
+	return BondFactory.createOnlineIdentifierBond(arguments.getFirst());
     }
 
 }
